# dirrust

./: Cargo.toml  README.md
.github/workflows/: rust.yml
scripts/: gen_fixture.py
src/: actions.rs  app.rs  dedup.rs  input.rs  main.rs  model.rs  scanner.rs  treemap.rs  util.rs
src/ui/: breakdown.rs  duplicates.rs  marked.rs  mod.rs  modal.rs  table.rs  theme.rs  treemap_view.rs
