[package]
name = "dirrust"
version = "0.1.0"
edition = "2021"
description = "Analizador de uso de disco TUI estilo WinDirStat (rápido, 100% local)"

# Perfil de release optimizado: el escaneo de árboles grandes y el render del
# treemap se benefician de optimización agresiva. LTO reduce tamaño y mejora
# el rendimiento del código paralelo de jwalk/rayon.
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
crossbeam-channel = "0.5.15"
crossterm = "0.29.0"
humansize = "2.1.3"
jwalk = "0.8.1"
ratatui = "0.30.0"
rayon = "1.12.0"
thiserror = "2.0.18"
trash = "5.2.6"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
